--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    test hghghgh
+    <div class="container-fluide text-center py-2 m-0 bg-black text-white">
+        <div class="row align-items-start m-0 p-0">
+            <div class="col text-start ps-3 fontsize">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                    <path class="logocolor"
+                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
+                </svg>
+                <span>Lorem ipsum dolor sit amet,</span>
+            </div>
+            <div class="col text-center fontsize">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path class="logocolor" fill-rule="evenodd"
+                        d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                </svg>
+                <span>Call : +01 1234567890</span>
+            </div>
+            <div class="col text-end pe-3 m-0 p-0 fontsize">
+                <?xml version="1.0" ?><svg class="mail" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                    <path class="logocolor1"
+                        d="M256 352c-16.53 0-33.06-5.422-47.16-16.41L0 173.2V400C0 426.5 21.49 448 48 448h416c26.51 0 48-21.49 48-48V173.2l-208.8 162.5C289.1 346.6 272.5 352 256 352zM16.29 145.3l212.2 165.1c16.19 12.6 38.87 12.6 55.06 0l212.2-165.1C505.1 137.3 512 125 512 112C512 85.49 490.5 64 464 64h-416C21.49 64 0 85.49 0 112C0 125 6.01 137.3 16.29 145.3z" />
+                </svg>
+                <span>demo@gmail.com</span>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluide banner m-0 p-0">
+        <div class="container-fluide text-center m-0 p-0">
+            <div class="row align-items-start m-0 p-0">
+                <div class="col-6 text-start logoname mt-2">
+                    Guarder
+                </div>
+                <div class="col-6">
+                    <nav class="navbar navbar-expand-lg p-0 mb-2 pt-0 mt-0 fst-normal  justify-content-end">
+                        <a class="# text-light active p-2 px-2 pt-4 menu link-underline link-underline-opacity-0"
+                            href="#">Home</a>
+                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
+                            href="#">About</a>
+                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
+                            href="#">Services</a>
+                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
+                            href="#">Guards</a>
+                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
+                            href="#">Contact Us</a>
+                    </nav>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
