--- a/index.html
+++ b/index.html
@@ -46,24 +46,91 @@
     </div>
     <div class="container-fluide banner m-0 p-0">
         <div class="container-fluide text-center m-0 p-0">
-            <div class="row align-items-start m-0 p-0">
-                <div class="col-6 text-start logoname mt-2">
-                    Guarder
+            <nav class="navbar navbar-expand-lg bg-transparent m-0 p-0">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-start logoname"> Guarder</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-flex justify-content-end me-3" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0 d-flex justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link active text-white px-2 pt-4 menu" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white px-2 pt-4 menu" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white px-2 pt-4 menu" href="#">Service</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white px-2 pt-4 menu" href="#">Guards</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white px-2 pt-4 menu" href="#">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <nav class="navbar navbar-expand-lg p-0 mb-2 pt-0 mt-0 fst-normal  justify-content-end">
-                        <a class="# text-light active p-2 px-2 pt-4 menu link-underline link-underline-opacity-0"
-                            href="#">Home</a>
-                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
-                            href="#">About</a>
-                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
-                            href="#">Services</a>
-                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
-                            href="#">Guards</a>
-                        <a class="# text-light menu p-2 pt-4 px-3 link-underline link-underline-opacity-0"
-                            href="#">Contact Us</a>
-                    </nav>
+            </nav>
 
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide m-o p-0">
+            <div class="carousel-indicators justify-content-end pe-5 ">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    class="active scroll" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="scroll1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="scroll2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="container m-5 p-5">
+                <div class="carousel-inner container p-4 m-4">
+                    <div class="carousel-item active  bg-transparent text-body">
+                        <h1 class="text-white col-8 m-o p-o headingcolor">YOUR SAFETY
+                            <br>
+                            <span class="ourcolor0">OUR RESPONSIBILITY</span>
+                        </h1>
+                        <p class="col-8 text-white pt-2 pb-3 Para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut
+                            enim ad
+                            minim veniam
+                        </p>
+                        <button type="button" class="btn btn-outline-light px-4 py-2 rounded-0 but">Read more</button>
+                        <button type="button" class="btn btn-outline-warning px-4 py-2 ms-1 rounded-0 but1">Get A
+                            Quote</button>
+                    </div>
+
+                    <div class="carousel-item bg-transparent text-body">
+                        <h1 class="text-white col-8 m-o p-o headingcolor">YOUR SAFETY
+                            <br>
+                            <span class="ourcolor0">OUR RESPONSIBILITY</span>
+                        </h1>
+                        <p class="col-8 text-white pt-2 pb-3 Para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut
+                            enim ad
+                            minim veniam
+                        </p>
+                        <button type="button" class="btn btn-outline-light px-4 py-2 rounded-0 but">Read more</button>
+                        <button type="button" class="btn btn-outline-warning px-4 py-2 ms-1 rounded-0 but1">Get A
+                            Quote</button>
+                    </div>
+                    <div class="carousel-item bg-transparent text-body">
+                        <h1 class="text-white col-8 m-o p-o headingcolor">YOUR SAFETY
+                            <br>
+                            <span class="ourcolor0">OUR RESPONSIBILITY</span>
+                        </h1>
+                        <p class="col-8 text-white pt-2 pb-3 Para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod magna aliqua. Ut
+                            enim ad
+                            minim veniam
+                        </p>
+                        <button type="button" class="btn btn-outline-light px-4 py-2 rounded-0 but">Read more</button>
+                        <button type="button" class="btn btn-outline-warning px-4 py-2 ms-1 rounded-0 but1">Get A
+                            Quote</button>
+                    </div>
                 </div>
             </div>
         </div>
