--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="container-fluide text-center py-2 m-0 bg-black text-white">
+    <div class="container-fluide text-center py-3  m-0 text-white topborder">
         <div class="row align-items-start m-0 p-0">
             <div class="col text-start ps-3 fontsize">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -25,7 +25,7 @@
                     <path class="logocolor"
                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
                 </svg>
-                <span>Lorem ipsum dolor sit amet,</span>
+                <span class="fontname">Lorem ipsum dolor sit amet,</span>
             </div>
             <div class="col text-center fontsize">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -33,21 +33,21 @@
                     <path class="logocolor" fill-rule="evenodd"
                         d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                 </svg>
-                <span>Call : +01 1234567890</span>
+                <span class="fontname">Call : +01 1234567890</span>
             </div>
             <div class="col text-end pe-3 m-0 p-0 fontsize">
                 <?xml version="1.0" ?><svg class="mail" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                     <path class="logocolor1"
                         d="M256 352c-16.53 0-33.06-5.422-47.16-16.41L0 173.2V400C0 426.5 21.49 448 48 448h416c26.51 0 48-21.49 48-48V173.2l-208.8 162.5C289.1 346.6 272.5 352 256 352zM16.29 145.3l212.2 165.1c16.19 12.6 38.87 12.6 55.06 0l212.2-165.1C505.1 137.3 512 125 512 112C512 85.49 490.5 64 464 64h-416C21.49 64 0 85.49 0 112C0 125 6.01 137.3 16.29 145.3z" />
                 </svg>
-                <span>demo@gmail.com</span>
+                <span class="fontname">demo@gmail.com</span>
             </div>
         </div>
     </div>
     <div class="container-fluide banner m-0 p-0">
         <div class="container-fluide text-center m-0 p-0">
-            <nav class="navbar navbar-expand-lg bg-transparent m-0 p-0">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg bg-transparent m-0 p-0 ">
+                <div class="container-fluid navigationbar">
                     <a class="navbar-brand text-start logoname"> Guarder</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -77,8 +77,8 @@
             </nav>
 
         </div>
-        <div id="carouselExampleIndicators" class="carousel slide m-o p-0">
-            <div class="carousel-indicators justify-content-end pe-5 ">
+        <div id="carouselExampleIndicators" class="carousel slide m-0 p-0 totalheight">
+            <div class="carousel-indicators justify-content-end pe-5 dot">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                     class="active scroll" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="scroll1"
@@ -86,8 +86,8 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="scroll2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="container m-5 p-5">
-                <div class="carousel-inner container p-4 m-4">
+            <div class="container m-5 p-5 box1">
+                <div class="carousel-inner container p-4 m-4 totalbox">
                     <div class="carousel-item active  bg-transparent text-body">
                         <h1 class="text-white col-8 m-o p-o headingcolor">YOUR SAFETY
                             <br>
