--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <span class="fontname">Lorem ipsum dolor sit amet,</span>
             </div>
             <div class="col text-center fontsize">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2
+                000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                     <path class="logocolor" fill-rule="evenodd"
                         d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
                 </svg>
@@ -52,12 +52,17 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span><svg class="wh bg-transparent" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                                <path class="icon" fill-rule="evenodd"
+                                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                            </svg></span>
                     </button>
-                    <div class="collapse navbar-collapse d-flex justify-content-end me-3" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse justify-content-end me-3" id="navbarSupportedContent">
                         <ul class="navbar-nav mb-2 mb-lg-0 d-flex justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link active text-white px-2 pt-4 menu" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active text-white px-2 pt-4 menu .d-md-none" aria-current="page"
+                                    href="#">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white px-2 pt-4 menu" href="#">About</a>
@@ -135,6 +140,20 @@
             </div>
         </div>
     </div>
+    <!-- <div class="container-fluid">
+        <div class="row position-relative m-4 p-0">
+            <div class="col-6 aboutbanner mx-5 mt-5 p-0">
+            </div>
+            <div class="col-6 about">
+                <h1 class="aboutheading">WHO ARE WE?</h1>
+                <p class="aboutpara">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit</p>
+                    <button type="button" class="btn btn-outline-light px-4 py-2 rounded-0 aboutread">Read more</button>
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
